Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8165736

Error message should be shown when JVMTI agent cannot be attached

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4 P4
    • 10
    • 8-pool, 9
    • core-svc
    • None
    • b36

        This issue is spin-outed from JDK-8164913.
        I proposed the fix to show error message when JVMTI agent cannot be attached in live phase.

        http://mail.openjdk.java.net/pipermail/serviceability-dev/2016-August/020245.html

        We should show useful message for users to understand the cause of failure.

          1. 8165736-hotspot.patch
            1 kB
            Yasumasa Suenaga
          2. 8165736-jdk.patch
            2 kB
            Yasumasa Suenaga
          3. 8165736-hotspot-jdk10hs.patch
            1 kB
            Yasumasa Suenaga
          4. 8165736-jdk-jdk10hs.patch
            3 kB
            Yasumasa Suenaga
          5. 8165736-jdk10-hs.patch
            5 kB
            Yasumasa Suenaga

              ysuenaga Yasumasa Suenaga
              ysuenaga Yasumasa Suenaga
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: