8165736: Error message should be shown when JVMTI agent cannot be attached

Reviewed-by: sspitsyn, dholmes